Fix media audio squashed

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -956,6 +956,7 @@ body:has(#modal-container .carousel) .status .media img:hover {
 .media-audio {
   width: 100%;
   height: 100%;
+  min-height: 88px;
   background-image: radial-gradient(
       circle at center center,
       transparent,
